@@ -64,9 +64,68 @@
         </configuration>
       </plugin>
 
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <version>3.1.0</version>
+        <executions>
+          <execution>
+            <id>ktlint</id>
+            <phase>verify</phase>
+            <configuration>
+              <target name="ktlint">
+                <java
+                  taskname="ktlint"
+                  dir="${basedir}"
+                  fork="true"
+                  failonerror="true"
+                  classpathref="maven.plugin.classpath"
+                  classname="com.pinterest.ktlint.Main"
+                >
+                  <!-- see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information -->
+                  <arg value="src/**/*.kt" />
+                </java>
+              </target>
+            </configuration>
+            <goals>
+              <goal>run</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>ktlint-format</id>
+            <configuration>
+              <target name="ktlint">
+                <java
+                  taskname="ktlint"
+                  dir="${basedir}"
+                  fork="true"
+                  failonerror="true"
+                  classpathref="maven.plugin.classpath"
+                  classname="com.pinterest.ktlint.Main"
+                >
+                  <!-- Note: the JVM args below is only required when running ktlint with Java 16+ in format mode -->
+                  <jvmarg value="--add-opens=java.base/java.lang=ALL-UNNAMED" />
+                  <!-- see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information -->
+                  <arg value="-F" />
+                  <arg value="src/**/*.kt" />
+                </java>
+              </target>
+            </configuration>
+            <goals>
+              <goal>run</goal>
+            </goals>
+          </execution>
+        </executions>
+        <dependencies>
+          <dependency>
+            <groupId>com.pinterest.ktlint</groupId>
+            <artifactId>ktlint-cli</artifactId>
+            <version>1.0.1</version>
+          </dependency>
+        </dependencies>
+      </plugin>
     </plugins>
   </build>
-
 
   <modules>
     <module>build-tools</module>
@@ -79,5 +138,7 @@
     <module>quarkus/quarkus-parent-project</module>
     <module>quarkus/quarkus-app</module>
     <module>quarkus/quarkus-lib</module>
+    <module>spring-boot/kt-app</module>
+    <module>spring-boot/kt-lib</module>
   </modules>
 </project>
